# cosmos-wallet-generator

./: Cargo.toml  mnemonic.txt
src/: main.rs
