[package]
name = "cosmos-wallet-generator"
version = "0.1.0"
authors = ["DanWizard <tortortorented@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = "0.4.1"
k256 = "0.10.2"
rand_core = "0.6.3"
hex = "0.4.3"
tiny-bip39 = "0.8.2"
bip32 = "0.3.0"
